cmake_minimum_required(VERSION 3.12)
project(Test)

set(CMAKE_CXX_STANDARD 14)
set(GLEW_H /usr/local/Cellar/glew/2.1.0/include/GL)
set(GLFW_H /usr/local/Cellar/glfw/3.2.1/include/GLFW)
set(GLM_H /usr/local/Cellar/glm/0.9.9.3/include/glm)
set(ASSIMP_H /usr/local/Cellar/assimp/4.1.0/include)
set(IRRKLANG_H /usr/local/Cellar/irrKlang/1.5.0/include)
set(FREETYPE_H /usr/local/Cellar/freetype/2.10.0/include/freetype2)
set(SOURCE_FILES carrots.cpp)
include_directories(${GLEW_H} ${GLFW_H} ${GLM_H} ${ASSIMP_H} ${IRRKLANG_H} ${FREETYPE_H})
find_library(OPENGL OpenGL)
set(GLEW_LINK /usr/local/Cellar/glew/2.1.0/lib/libGLEW.2.1.dylib)
set(GLFW_LINK /usr/local/Cellar/glfw/3.2.1/lib/libglfw.3.dylib)
set(ASSIMP_LINK /usr/local/Cellar/assimp/4.1.0/lib/libassimp.4.dylib)
set(IRRKLANG_LINK /usr/local/Cellar/irrKlang/1.5.0/lib/libirrklang.dylib)
set(FREETYPE_LINK /usr/local/Cellar/freetype/2.10.0/lib/libfreetype.dylib)
link_libraries(${OPENGL} ${GLEW_LINK} ${GLFW_LINK} ${ASSIMP_LINK} ${IRRKLANG_LINK} ${FREETYPE_LINK})
add_executable(Test main.cpp Shader.cpp Shader.h Camera.cpp Camera.h Material.cpp Material.h Mesh.cpp Mesh.h Model.cpp Model.h Light.cpp Light.h FirstPersonGun.cpp FirstPersonGun.h rigidbody.cpp rigidbody.h Collider.cpp Collider.h SceneController.cpp SceneController.h ParticleSystem.cpp ParticleSystem.h Animition.h)
